css/main.css
body {
    margin: 60px auto;
    width: 70%;
    font-size: 1.5em;
}
img {
    float: right;
    margin-right: 5px;
}
nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}
a {
    text-decoration: none;
    color: #999;
}
a:hover {
    text-decoration: underline;
}
h1 {
    font-size: 2em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    line-height: 1.4em;
    color: #333;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

ul,ol { 
    margin: 20px auto 40px; 
    color: #333;
}

li {
    margin-bottom: 0.5em;
}

ul.postlist li {
    list-style: none;
}

